--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -25,7 +25,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: dimensions.padding('md');
+        gap: dimensions.padding('lg');
         height: 100%;
     }
 
