--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,3 +1,14 @@
 .container {
+    position: relative;
     height: calc(100vh - 42px);
+
+    & .background {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        filter: blur(4px) brightness(0.5);
+    }
 }
