--- a/src/components/LinkButton/LinkButton.module.scss
+++ b/src/components/LinkButton/LinkButton.module.scss
@@ -9,7 +9,7 @@
     font-family: "Times New Roman";
 
     &.active {
-        color: colors.fg('primary');
+        color: colors.text('accent');
     }
 
     & .wrapper {
