--- a/src/components/MenuList/Category/Category.module.scss
+++ b/src/components/MenuList/Category/Category.module.scss
@@ -1,19 +1,68 @@
 @use '@styles/colors.scss' as colors;
 @use '@styles/dimensions.scss' as dimensions;
+@use '@styles/decorations.scss' as decorations;
+@use '@styles/mixins.scss' as mixins;
+@use '@styles/gradients.scss' as gradients;
+@use '@styles/breakpoints.scss' as breakpoints;
 
 .container {
     display: flex;
     gap: dimensions.margin('sm');
     align-items: center;
+    justify-content: center;
+    padding: dimensions.padding('md') dimensions.padding('xl');
+    background: colors.bg('primary');
+
+    &:first-child {
+        border-radius: 
+            decorations.border-radius('lg')
+            0
+            0
+            decorations.border-radius('lg');
+    }
+    &:last-child {
+        border-radius: 
+            0
+            decorations.border-radius('lg')
+            decorations.border-radius('lg')
+            0;
+    }
+
+    @media (max-width: breakpoints.screen('tablet')) {
+        padding: dimensions.padding('sm') dimensions.padding('lg');
+    }
+
+    @media (max-width: breakpoints.screen('phone')) {
+        &:first-child {
+            border-radius: 
+                decorations.border-radius('md')
+                decorations.border-radius('md')
+                0
+                0;
+        }
+        &:last-child {
+            border-radius: 
+            0
+            0
+            decorations.border-radius('md')
+            decorations.border-radius('md');
+        }
+    }
 
     cursor: pointer;
 
     &:hover {
-        color: colors.text('secondary');                                                                                                                                                                                                                                                                                                                              
+        color: colors.text('secondary');      
+        background: colors.bg('secondary');                                                                                                                                                                                                                                                                                                         
     }
 
     &.selected {
-        color: colors.fg('primary');
+        color: colors.text('tertiary');
+        @include gradients.gold();
+    }
+
+    &:not(.selected) {
+        box-shadow: inset decorations.box-shadow('sm');
     }
 
     & .count {
