--- a/src/components/Title/Title.module.scss
+++ b/src/components/Title/Title.module.scss
@@ -4,39 +4,62 @@
 @use '@styles/breakpoints.scss' as breakpoints;
 
 .container {
+    & .lg {
+        font-size: fonts.size('lg');
+        & .wing {
+            width: 64px;
+        }
+
+        @media (max-width: breakpoints.screen("tablet")) {
+            font-size: fonts.size('md');
+            & .wing {
+                width: 32px;
+            }
+        }
+        @media (max-width: breakpoints.screen("phone")) {
+            font-size: fonts.size('sm');
+            & .wing {
+                display: none;
+            }
+        }
+    }
+    & .xl {
+        font-size: fonts.size('xl');
+        & .wing {
+            width: 128px;
+        }
+        
+        @media (max-width: breakpoints.screen("tablet")) {
+            font-size: fonts.size('lg');
+            & .wing {
+                width: 64px;
+            }
+        }
+        @media (max-width: breakpoints.screen("phone")) {
+            font-size: fonts.size('md');
+        }
+    }
+    & .xxl {
+        font-size: fonts.size('xxl');
+        & .wing {
+            width: 128px;
+        }
+
+        @media (max-width: breakpoints.screen("tablet")) {
+            font-size: fonts.size('xl');
+        }
+        @media (max-width: breakpoints.screen("phone")) {
+            font-size: fonts.size('lg');
+        }
+    }
+
+
     & .headline {
         margin: 0;
-
-        &.lg {
-            font-size: fonts.size('lg');
-
-            @media (max-width: breakpoints.screen("tablet")) {
-                font-size: fonts.size('md');
-            }
-            @media (max-width: breakpoints.screen("phone")) {
-                font-size: fonts.size('sm');
-            }
-        }
-        &.xl {
-            font-size: fonts.size('xl');
-            
-            @media (max-width: breakpoints.screen("tablet")) {
-                font-size: fonts.size('lg');
-            }
-            @media (max-width: breakpoints.screen("phone")) {
-                font-size: fonts.size('md');
-            }
-        }
-        &.xxl {
-            font-size: fonts.size('xxl');
-
-            @media (max-width: breakpoints.screen("tablet")) {
-                font-size: fonts.size('xl');
-            }
-            @media (max-width: breakpoints.screen("phone")) {
-                font-size: fonts.size('lg');
-            }
-        }
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: dimensions.margin('lg');
 
         /* Fonts */
         &.font-standard {
