--- a/src/pages/Menu/Menu.module.scss
+++ b/src/pages/Menu/Menu.module.scss
@@ -1,7 +1,22 @@
 @use '@styles/dimensions.scss' as dimensions;
 
 .container {
+    height: 100vh;
+
     & .teaser {
         margin-top: dimensions.margin('xl');
     }
+}
+
+.background {
+    position: fixed !important;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+
+    background-size: cover;
+
+    //filter: blur(5px) brightness(0.8);
 }
