--- a/src/components/Page/Page.module.scss
+++ b/src/components/Page/Page.module.scss
@@ -6,3 +6,16 @@
     overflow-y: auto;
     overflow-x: hidden;
 }
+
+.background {
+    position: fixed !important;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+
+    background-size: cover;
+
+    //filter: blur(5px) brightness(0.8);
+}
