Meal of the week and menu stylings.

--- a/src/components/MenuList/Category/Category.module.scss
+++ b/src/components/MenuList/Category/Category.module.scss
@@ -59,7 +59,7 @@
 
     &.selected {
         color: colors.text('tertiary');
-        @include gradients.gold();
+        @include gradients.silver();
     }
 
     &:not(.selected) {
