--- a/src/components/DiscordEvent/DiscordEvent.module.scss
+++ b/src/components/DiscordEvent/DiscordEvent.module.scss
@@ -1,5 +1,6 @@
 @use '@styles/colors.scss' as colors;
 @use '@styles/dimensions.scss' as dimensions;
+@use '@styles/breakpoints.scss' as breakpoints;
 
 .container {
     height: 100%;
@@ -23,10 +24,29 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                margin-top: dimensions.margin('sm');
 
                 & .localeInfoButton {
                     margin: 0;
                     padding: 0;
+                }
+            }
+
+            & .timeunit {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: dimensions.margin('sm');
+
+                img {
+                    height: 22px;
+
+                    @media (max-width: breakpoints.screen('tablet')) {
+                        height: 16px;
+                    }
+                    @media (max-width: breakpoints.screen('phone')) {
+                        height: 14px;
+                    }
                 }
             }
         }
