--- a/src/components/MenuList/DiningItem/DiningItem.module.scss
+++ b/src/components/MenuList/DiningItem/DiningItem.module.scss
@@ -26,6 +26,14 @@
         justify-content: space-between;
         align-items: center;
 
+        @media (max-width: breakpoints.screen('desktop')) {
+            margin-top: dimensions.margin('md');
+        }
+    
+        @media (max-width: breakpoints.screen('tablet')) {
+            margin-top: 0;
+        }
+
         & .title {
             display: flex;
             align-items: end;
