Title margin changes.

--- a/src/components/MenuList/MenuList.module.scss
+++ b/src/components/MenuList/MenuList.module.scss
@@ -39,6 +39,8 @@
 
         & .title {
             column-span: all;
+            margin-top: dimensions.margin('sm');
+            margin-bottom: dimensions.margin('lg');
         }
 
         & * {
