--- a/src/components/StaffList/StaffModal/StaffModal.module.scss
+++ b/src/components/StaffList/StaffModal/StaffModal.module.scss
@@ -103,12 +103,9 @@
             padding: 0 dimensions.padding('md');
             width: 100%;
             border-radius: decorations.border-radius('md') decorations.border-radius('md') 0 0;
-            box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.4);
-
-            transition: 200ms all ease-in-out;
             
             overflow-y: hidden;
-            background: colors.bg('primary');
+            background: rgba(0, 0, 0, 0.8);
 
             position: absolute;
             bottom: 0;
@@ -140,7 +137,7 @@
                     background: none;
 
                     &.background {
-                        background: linear-gradient(to right, transparent 50%, colors.bg('primary') 60%);
+                        background: linear-gradient(to right, transparent 50%, black 60%);
                     }
                 }
             }
@@ -166,6 +163,7 @@
             gap: dimensions.margin('md');
 
             z-index: 2;
+            user-select: none;
 
             & img {
                 width: 18px;
