Extra margin for the about page.

--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -24,7 +24,7 @@
    }
 
    & .title {
-      margin-top: dimensions.margin('lg');
+      margin-top: dimensions.margin('xxl');
    }
 
    & .highlights {
