--- a/src/pages/Services/Services.module.scss
+++ b/src/pages/Services/Services.module.scss
@@ -14,7 +14,8 @@
         margin: dimensions.margin('lg') dimensions.margin('xl');
 
         & .title {
-            margin-bottom: dimensions.margin('xl');
+            margin-top: dimensions.margin('xxl');
+            margin-bottom: dimensions.margin('xxl');
         }
 
         & .services {
