--- a/src/components/OffCanvas/OffCanvas.module.scss
+++ b/src/components/OffCanvas/OffCanvas.module.scss
@@ -13,6 +13,10 @@
         display: flex;
         justify-content: end;
         padding: dimensions.padding('md');
+
+        & button {
+            box-shadow: none;
+        }
     }
 
     & .content {
