--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,4 +1,5 @@
 @use '@styles/dimensions.scss' as dimensions;
+@use '@styles/breakpoints.scss' as breakpoints;
 @use '@styles/colors.scss' as colors;
 @use '@styles/fonts.scss' as fonts;
 
@@ -6,25 +7,67 @@
     background: colors.bg('secondary');
     width: 100%;
     z-index: 2;
-    padding-top: dimensions.padding('sm');
-    padding-bottom: dimensions.padding('sm');
+    padding: dimensions.padding('xl');
 
     & .nav {
-        & .col {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: dimensions.margin('md');
+        display: flex;
+        justify-content: space-around;
+
+        & .siteinfo {
             color: colors.text('secondary');
-            height: 100%;
-    
-            & * {
-                font-size: fonts.size('sm');
+            text-align: center;
+
+            display: grid;
+            align-content: start;
+            gap: dimensions.margin('md');
+
+            & .title {
+                color: colors.text('primary');
             }
-    
-            & span {
-                display: flex;
-                align-items: center;
+
+            & a, & a:visited {
+                color: colors.text('secondary');
+            }
+        
+            & a:hover {
+                text-decoration: underline;
+            }
+
+            & .developer {
+                & * {
+                    display: flex;
+                    gap: dimensions.margin('sm');
+                    align-items: center;
+                    justify-content: center;
+                    
+                    & a {
+                        text-align: center;
+
+                        & img {
+                            height: 18px;
+                            width: 18px;
+                        }
+                    }
+                }
+            }
+        }
+
+        @media (max-width: breakpoints.screen('tablet')) {
+            display: grid;
+            gap: dimensions.margin('lg');
+            grid-template-columns: 1fr 1fr;
+
+            & .siteinfo {
+                justify-content: end;
+            }
+        }
+
+        @media (max-width: breakpoints.screen('phone')) {
+            grid-template-columns: 1fr;
+
+            & .siteinfo {
+                justify-content: center;
+                grid-column: span 2;
             }
         }
     }
