--- a/src/pages/Partners/Partners.module.scss
+++ b/src/pages/Partners/Partners.module.scss
@@ -12,7 +12,14 @@
     & .partnerVenues {
         display: grid;
         gap: dimensions.margin('xxl');
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(4, 1fr);
+        justify-content: center;
+    }
+
+    @media (max-width: breakpoints.screen('desktop')) {
+        & .partnerVenues {
+            grid-template-columns: repeat(3, 1fr);
+        }
     }
 
     @media (max-width: breakpoints.screen('tablet')) {
