--- a/src/pages/Reservations/Reservations.module.scss
+++ b/src/pages/Reservations/Reservations.module.scss
@@ -22,6 +22,18 @@
         & .title {
             display: grid;
             justify-items: center;
+            text-align: center;
+
+            & .logo {
+                display: flex;
+                justify-content: center;
+                margin-bottom: dimensions.margin('lg');
+
+                & img {
+                    max-height: 100px;
+                    max-width: 100%;
+                }
+            }
 
             & .subline {
                 color: colors.text('secondary');
@@ -45,6 +57,14 @@
                 & img {
                     height: 250px;
                     max-width: 100%;
+
+                    @media (max-width: breakpoints.screen('tablet')) {
+                        height: 200px;
+                    }
+
+                    @media (max-width: breakpoints.screen('phone')) {
+                        height: 100px;
+                    }
                 }
             }
 
