--- a/src/components/Title/Title.module.scss
+++ b/src/components/Title/Title.module.scss
@@ -134,4 +134,10 @@
     &.centered {
         text-align: center;
     }
+
+    & .wing {
+        @media (max-width: breakpoints.screen('phone')) {
+            display: none;
+        }
+    }
 }
