--- a/src/pages/Reservations/Reservations.module.scss
+++ b/src/pages/Reservations/Reservations.module.scss
@@ -4,7 +4,7 @@
 @use '@styles/breakpoints.scss' as breakpoints;
 
 .container {
-    height: 100%;
+    display: grid;
 
     & .teaser {
         display: flex;
@@ -16,43 +16,28 @@
         padding: dimensions.padding('md');
     }
 
+    & .description {
+        margin-top: dimensions.margin('xl');
+        background: rgba(0, 0, 0, 0.75);
+        padding: dimensions.padding('xl');
+        border-radius: decorations.border-radius('md');
+        box-shadow: decorations.box-shadow('md');
+        justify-self: center;
+    }
+
     & .content {
         margin: dimensions.margin('lg') dimensions.margin('xl');
-
-        & .title {
-            display: grid;
-            justify-items: center;
-            text-align: center;
-
-            & .logo {
-                display: flex;
-                justify-content: center;
-                margin-bottom: dimensions.margin('lg');
-
-                & img {
-                    max-height: 100px;
-                    max-width: 100%;
-                }
-            }
-
-            & .subline {
-                color: colors.text('secondary');
-            }
-
-            & .description {
-                text-align: center;
-            }
-        }
 
         @media (max-width: breakpoints.screen('tablet')) {
             margin: dimensions.margin('lg') dimensions.margin('md');
         }
 
         & .lagoon {
+            display: grid;
+
             & .logo {
                 display: flex;
                 justify-content: center;
-                margin-bottom: dimensions.margin('lg');
 
                 & img {
                     height: 250px;
@@ -69,7 +54,7 @@
             }
 
             & .description {
-                color: colors.text('secondary');
+             
                 text-align: center;
 
                 & a {
@@ -82,6 +67,30 @@
                 justify-content: center;
                 gap: dimensions.margin('md');
             }
+        }
+    }
+
+    & .title {
+        display: grid;
+        text-align: center;
+
+        & .logo {
+            display: flex;
+            justify-content: center;
+            margin-bottom: dimensions.margin('lg');
+
+            & img {
+                max-height: 100px;
+                max-width: 100%;
+            }
+        }
+
+        & .subline {
+            color: colors.text('secondary');
+        }
+
+        & .description {
+            text-align: center;
         }
     }
 }
