--- a/src/pages/Services/Services.module.scss
+++ b/src/pages/Services/Services.module.scss
@@ -25,7 +25,7 @@
 
             & .category {
                 & .cards {
-                    background: colors.bg('secondary');
+                    background: rgba(0, 0, 0, 0.75);
                     padding: dimensions.padding('xl');
                     border-radius: decorations.border-radius('md');
                     box-shadow: decorations.box-shadow('md');
